@@ -1,3 +1,15 @@
+2008-01-09  Keith Marshall  <keithmarshall@users.sourceforge.net>
+
+	Support `/dev/stdin' and '/dev/stdout', specified as command line
+	arguments, as case-insensitive aliases for `-', representing the
+	standard input and standard output streams respectively.
+
+	* gencat.c (msgcat): Assign from first non-option command line
+	argument; replace with "-", if strcasecmp matches "/dev/stdout".
+
+	* mcsource.c (input): Use strcasecmp instead of strcmp, to check for
+	match to "/dev/stdin".
+
 2008-01-08  Keith Marshall  <keithmarshall@users.sourceforge.net>
 
 	Add `-help' and `-version' options for `gencat'.
